Closed Bug 931453 Opened 12 years ago Closed 12 years ago

Crash removing a <track> from a <video>

Categories

(Core :: Audio/Video, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla28
Tracking Status
firefox26 --- unaffected
firefox27 + verified
firefox28 --- verified

People

(Reporter: jruderman, Assigned: drexler)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(3 files)

With user_pref("media.webvtt.enabled", true); The testcase hits a crash in mozilla::dom::TextTrack::SetReadyState. I think this a regression from bug 882665.
Attached file stack
Assignee: nobody → andrew.quartey
Attached patch fixSplinter Review
Ensure that the media element is non-null at time of use and likewise a similar potential problem fix the TextTrack in WebVTTListener::OnStopRequest.
Attachment #823070 - Flags: review?(khuey)
Comment on attachment 823070 [details] [diff] [review] fix Review of attachment 823070 [details] [diff] [review]: ----------------------------------------------------------------- ::: content/media/WebVTTListener.cpp @@ +107,5 @@ > nsresult aStatus) > { > if (mElement->ReadyState() != HTMLTrackElement::ERROR) { > + TextTrack* track = mElement->Track(); > + track->SetReadyState(HTMLTrackElement::LOADED); What's the point of this change?
Attachment #823070 - Flags: review?(khuey) → review+
(In reply to Kyle Huey [:khuey] (khuey@mozilla.com) from comment #3) > Comment on attachment 823070 [details] [diff] [review] > fix > > Review of attachment 823070 [details] [diff] [review]: > ----------------------------------------------------------------- > > ::: content/media/WebVTTListener.cpp > @@ +107,5 @@ > > nsresult aStatus) > > { > > if (mElement->ReadyState() != HTMLTrackElement::ERROR) { > > + TextTrack* track = mElement->Track(); > > + track->SetReadyState(HTMLTrackElement::LOADED); > > What's the point of this change? Just a precaution since HTMLTrackElement::Track() guarantees that that |mTrack| is non-null.
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Reproduced on nightly 2013-10-27. Verified fixed FF 28.0a1 (2013-11-14) Win 7 x64
Status: RESOLVED → VERIFIED
This landed prior to the merge, In addition, I verified latest Aurora doesn't crash with STR's from comment 0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: