Bug 931453 - Ensure TextTrack's media element reference is not null. r=khuey