content/media/WebVTTListener.cpp
@@ -107,7 +107,8 @@ WebVTTListener::OnStopRequest(nsIRequest* aRequest,
                               nsresult aStatus)
 {
   if (mElement->ReadyState() != HTMLTrackElement::ERROR) {
-    mElement->mTrack->SetReadyState(HTMLTrackElement::LOADED);
+    TextTrack* track = mElement->Track();
+    track->SetReadyState(HTMLTrackElement::LOADED);
   }
   // Attempt to parse any final data the parser might still have.
   mParserWrapper->Flush();
